# telegram_chats_and_acc_service

./: Dockerfile  config.py  conftest.py  docker-compose.yml  entrypoint.sh  external_service.py  main.py  pyproject.toml
.github/workflows/: docker-build-push-deploy.yml  push-docker.yml
alembic/: env.py
alembic/versions/: 3d3f8e050967_init.py  e178252efdbe_init.py
database/crud/: ai_response.py  base.py  chat.py  message.py  telegram_account.py
database/db/: session.py
database/models/: ai_response.py  chat.py  message.py  telegram_account.py
database/schemas/: ai_response.py  chat.py  message.py  telegram_account.py
routers/: account.py  ai_response.py  chat.py  data_for_processing.py  messages.py
schemas/: message.py
test/: test_account.py  test_ai_response.py  test_chat.py  test_data_for_processing.py
